--- a/public/css/admin/app.css
+++ b/public/css/admin/app.css
@@ -770,14 +770,6 @@ img {
   position: relative;
 }
 
-.top-0{
-  top: 0px;
-}
-
-.right-0{
-  right: 0px;
-}
-
 .top-3{
   top: 0.75rem;
 }
@@ -786,12 +778,24 @@ img {
   right: 0.75rem;
 }
 
+.right-2{
+  right: 0.5rem;
+}
+
+.top-\[4px\]{
+  top: 4px;
+}
+
 .top-1{
   top: 0.25rem;
 }
 
 .right-1{
   right: 0.25rem;
+}
+
+.right-0{
+  right: 0px;
 }
 
 .left-0{
@@ -806,49 +810,42 @@ img {
   grid-column: span 12 / span 12;
 }
 
+.col-span-2{
+  grid-column: span 2 / span 2;
+}
+
+.col-span-3{
+  grid-column: span 3 / span 3;
+}
+
+.col-span-1{
+  grid-column: span 1 / span 1;
+}
+
+.col-span-5{
+  grid-column: span 5 / span 5;
+}
+
+.col-span-7{
+  grid-column: span 7 / span 7;
+}
+
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
 }
 
-.ml-1{
-  margin-left: 0.25rem;
-}
-
-.mt-2{
+.my-2{
   margin-top: 0.5rem;
-}
-
-.mr-2{
-  margin-right: 0.5rem;
-}
-
-.ml-2{
-  margin-left: 0.5rem;
-}
-
-.mt-4{
-  margin-top: 1rem;
-}
-
-.ml-4{
-  margin-left: 1rem;
-}
-
-.mt-8{
-  margin-top: 2rem;
-}
-
-.ml-12{
-  margin-left: 3rem;
-}
-
-.-mt-px{
-  margin-top: -1px;
+  margin-bottom: 0.5rem;
 }
 
 .ml-3{
   margin-left: 0.75rem;
+}
+
+.mr-\[2px\]{
+  margin-right: 2px;
 }
 
 .mb-5{
@@ -883,6 +880,10 @@ img {
   margin-left: 1.25rem;
 }
 
+.mt-2{
+  margin-top: 0.5rem;
+}
+
 .mb-3{
   margin-bottom: 0.75rem;
 }
@@ -907,8 +908,8 @@ img {
   display: none;
 }
 
-.h-5{
-  height: 1.25rem;
+.h-\[24px\]{
+  height: 24px;
 }
 
 .h-8{
@@ -927,6 +928,50 @@ img {
   height: 3.5rem;
 }
 
+.h-5{
+  height: 1.25rem;
+}
+
+.h-48{
+  height: 12rem;
+}
+
+.h-20{
+  height: 5rem;
+}
+
+.h-\[120px\]{
+  height: 120px;
+}
+
+.h-40{
+  height: 10rem;
+}
+
+.h-28{
+  height: 7rem;
+}
+
+.h-\[300px\]{
+  height: 300px;
+}
+
+.h-\[331px\]{
+  height: 331px;
+}
+
+.h-\[351px\]{
+  height: 351px;
+}
+
+.h-\[367px\]{
+  height: 367px;
+}
+
+.h-\[400px\]{
+  height: 400px;
+}
+
 .max-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
   max-height: calc(100vh - 4rem);
 }
@@ -939,16 +984,20 @@ img {
   min-height: calc(100vh - 4rem);
 }
 
-.w-5{
-  width: 1.25rem;
+.w-\[24px\]{
+  width: 24px;
 }
 
-.w-8{
-  width: 2rem;
+.w-1\/4{
+  width: 25%;
 }
 
-.w-auto{
-  width: auto;
+.w-full{
+  width: 100%;
+}
+
+.w-\[140px\]{
+  width: 140px;
 }
 
 .w-96{
@@ -959,12 +1008,12 @@ img {
   width: 3.5rem;
 }
 
-.w-full{
-  width: 100%;
-}
-
 .w-80{
   width: 20rem;
+}
+
+.w-8{
+  width: 2rem;
 }
 
 .w-52{
@@ -975,12 +1024,20 @@ img {
   width: 18rem;
 }
 
-.max-w-6xl{
-  max-width: 72rem;
+.w-5{
+  width: 1.25rem;
+}
+
+.w-\[240px\]{
+  width: 240px;
 }
 
 .max-w-sm{
   max-width: 24rem;
+}
+
+.max-w-md{
+  max-width: 28rem;
 }
 
 .flex-none{
@@ -1051,12 +1108,28 @@ img {
   resize: both;
 }
 
-.grid-cols-1{
-  grid-template-columns: repeat(1, minmax(0, 1fr));
+.grid-cols-2{
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .grid-cols-12{
   grid-template-columns: repeat(12, minmax(0, 1fr));
+}
+
+.grid-cols-3{
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.grid-cols-4{
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+
+.grid-cols-6{
+  grid-template-columns: repeat(6, minmax(0, 1fr));
+}
+
+.grid-cols-8{
+  grid-template-columns: repeat(8, minmax(0, 1fr));
 }
 
 .flex-col{
@@ -1071,8 +1144,16 @@ img {
   justify-content: center;
 }
 
+.justify-between{
+  justify-content: space-between;
+}
+
 .gap-3{
   gap: 0.75rem;
+}
+
+.gap-4{
+  gap: 1rem;
 }
 
 .gap-2{
@@ -1114,17 +1195,16 @@ img {
   border-radius: 0.375rem;
 }
 
-.border-t{
-  border-top-width: 1px;
+.border-2{
+  border-width: 2px;
 }
 
 .border-b{
   border-bottom-width: 1px;
 }
 
-.border-gray-200{
-  --tw-border-opacity: 1;
-  border-color: rgb(229 231 235 / var(--tw-border-opacity));
+.border-inherit{
+  border-color: inherit;
 }
 
 .border-gray-300{
@@ -1142,14 +1222,9 @@ img {
   border-color: rgb(30 41 59 / var(--tw-border-opacity));
 }
 
-.bg-white{
+.bg-\[\#e4e9f2\]{
   --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-gray-100{
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+  background-color: rgb(228 233 242 / var(--tw-bg-opacity));
 }
 
 .bg-red-100{
@@ -1167,6 +1242,16 @@ img {
   background-color: rgb(248 250 252 / var(--tw-bg-opacity));
 }
 
+.bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-gray-100{
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
 .bg-slate-800{
   --tw-bg-opacity: 1;
   background-color: rgb(30 41 59 / var(--tw-bg-opacity));
@@ -1177,8 +1262,66 @@ img {
   background-color: rgb(15 23 42 / var(--tw-bg-opacity));
 }
 
-.p-6{
-  padding: 1.5rem;
+.bg-\[\#ababab\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(171 171 171 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#ccf9ff\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(204 249 255 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#f5f9fa\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 249 250 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#babfbf\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(186 191 191 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#e6e8e8\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(230 232 232 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#f2f2f2\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(242 242 242 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#f5f5f5\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 245 245 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#e6e6e6\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(230 230 230 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#fff\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-auto{
+  background-size: auto;
+}
+
+.bg-cover{
+  background-size: cover;
+}
+
+.bg-contain{
+  background-size: contain;
+}
+
+.object-cover{
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .p-4{
@@ -1197,19 +1340,24 @@ img {
   padding: 0px;
 }
 
-.py-4{
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+.px-\[20px\]{
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
-.px-6{
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+.py-\[10px\]{
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .px-5{
   padding-left: 1.25rem;
   padding-right: 1.25rem;
+}
+
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .py-1{
@@ -1222,13 +1370,25 @@ img {
   padding-right: 1rem;
 }
 
-.py-2{
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+.py-4{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
-.pt-8{
-  padding-top: 2rem;
+.pl-\[8px\]{
+  padding-left: 8px;
+}
+
+.pr-16{
+  padding-right: 4rem;
+}
+
+.pl-3{
+  padding-left: 0.75rem;
+}
+
+.pt-1{
+  padding-top: 0.25rem;
 }
 
 .pt-16{
@@ -1237,6 +1397,14 @@ img {
 
 .pr-5{
   padding-right: 1.25rem;
+}
+
+.pt-2{
+  padding-top: 0.5rem;
+}
+
+.pt-3{
+  padding-top: 0.75rem;
 }
 
 .text-left{
@@ -1256,9 +1424,16 @@ img {
   line-height: 1.25rem;
 }
 
-.text-lg{
-  font-size: 1.125rem;
-  line-height: 1.75rem;
+.text-\[18px\]{
+  font-size: 18px;
+}
+
+.text-\[14px\]{
+  font-size: 14px;
+}
+
+.text-\[13px\]{
+  font-size: 13px;
 }
 
 .text-3xl{
@@ -1281,47 +1456,17 @@ img {
   line-height: 2rem;
 }
 
+.font-bold{
+  font-weight: 700;
+}
+
 .font-semibold{
   font-weight: 600;
 }
 
-.leading-7{
-  line-height: 1.75rem;
-}
-
-.text-gray-200{
+.text-black{
   --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity));
-}
-
-.text-gray-300{
-  --tw-text-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-text-opacity));
-}
-
-.text-gray-400{
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
-}
-
-.text-gray-500{
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
-}
-
-.text-gray-600{
-  --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity));
-}
-
-.text-gray-700{
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
-}
-
-.text-gray-900{
-  --tw-text-opacity: 1;
-  color: rgb(17 24 39 / var(--tw-text-opacity));
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .text-red-800{
@@ -1334,6 +1479,21 @@ img {
   color: rgb(22 101 52 / var(--tw-text-opacity));
 }
 
+.text-gray-900{
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
+}
+
+.text-gray-500{
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
+.text-gray-700{
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -1344,24 +1504,14 @@ img {
   color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
 }
 
-.text-red-500{
-  --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
-}
-
 .text-sky-500{
   --tw-text-opacity: 1;
   color: rgb(14 165 233 / var(--tw-text-opacity));
 }
 
-.underline{
-  -webkit-text-decoration-line: underline;
-          text-decoration-line: underline;
-}
-
-.antialiased{
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.text-red-500{
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
 .opacity-0{
@@ -1380,15 +1530,15 @@ img {
   opacity: 0.75;
 }
 
-.shadow{
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .shadow-lg{
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow{
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1485,107 +1635,25 @@ img {
   outline-offset: 2px;
 }
 
-@media (prefers-color-scheme: dark){
-
-  .dark\:border-gray-700{
-    --tw-border-opacity: 1;
-    border-color: rgb(55 65 81 / var(--tw-border-opacity));
-  }
-
-  .dark\:bg-gray-900{
-    --tw-bg-opacity: 1;
-    background-color: rgb(17 24 39 / var(--tw-bg-opacity));
-  }
-
-  .dark\:bg-gray-800{
-    --tw-bg-opacity: 1;
-    background-color: rgb(31 41 55 / var(--tw-bg-opacity));
-  }
-
-  .dark\:text-gray-500{
-    --tw-text-opacity: 1;
-    color: rgb(107 114 128 / var(--tw-text-opacity));
-  }
-
-  .dark\:text-white{
-    --tw-text-opacity: 1;
-    color: rgb(255 255 255 / var(--tw-text-opacity));
-  }
-
-  .dark\:text-gray-400{
-    --tw-text-opacity: 1;
-    color: rgb(156 163 175 / var(--tw-text-opacity));
-  }
-}
-
 @media (min-width: 640px){
-
-  .sm\:ml-0{
-    margin-left: 0px;
-  }
-
-  .sm\:block{
-    display: block;
-  }
 
   .sm\:flex{
     display: flex;
   }
 
-  .sm\:h-20{
-    height: 5rem;
-  }
-
   .sm\:w-72{
     width: 18rem;
-  }
-
-  .sm\:items-center{
-    align-items: center;
-  }
-
-  .sm\:justify-start{
-    justify-content: flex-start;
-  }
-
-  .sm\:justify-between{
-    justify-content: space-between;
-  }
-
-  .sm\:rounded-lg{
-    border-radius: 0.5rem;
-  }
-
-  .sm\:px-6{
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-  }
-
-  .sm\:pt-0{
-    padding-top: 0px;
-  }
-
-  .sm\:text-left{
-    text-align: left;
-  }
-
-  .sm\:text-right{
-    text-align: right;
   }
 }
 
 @media (min-width: 768px){
 
-  .md\:grid-cols-2{
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+  .md\:block{
+    display: block;
   }
 
-  .md\:border-t-0{
-    border-top-width: 0px;
-  }
-
-  .md\:border-l{
-    border-left-width: 1px;
+  .md\:hidden{
+    display: none;
   }
 }
 
@@ -1599,6 +1667,10 @@ img {
     grid-column: span 9 / span 9;
   }
 
+  .lg\:col-span-7{
+    grid-column: span 7 / span 7;
+  }
+
   .lg\:mb-0{
     margin-bottom: 0px;
   }
@@ -1607,21 +1679,41 @@ img {
     display: block;
   }
 
+  .lg\:grid{
+    display: grid;
+  }
+
   .lg\:hidden{
     display: none;
+  }
+
+  .lg\:h-\[400px\]{
+    height: 400px;
+  }
+
+  .lg\:grid-cols-8{
+    grid-template-columns: repeat(8, minmax(0, 1fr));
+  }
+
+  .lg\:gap-4{
+    gap: 1rem;
   }
 
   .lg\:p-7{
     padding: 1.75rem;
   }
 
-  .lg\:px-8{
-    padding-left: 2rem;
-    padding-right: 2rem;
+  .lg\:px-10{
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
   }
 
   .lg\:pl-72{
     padding-left: 18rem;
+  }
+
+  .lg\:pl-10{
+    padding-left: 2.5rem;
   }
 }
 
