--- a/public/css/admin/app.css
+++ b/public/css/admin/app.css
@@ -957,6 +957,10 @@ img {
   margin-left: 1.25rem;
 }
 
+.mt-10{
+  margin-top: 2.5rem;
+}
+
 .mb-3{
   margin-bottom: 0.75rem;
 }
@@ -971,6 +975,10 @@ img {
 
 .flex{
   display: flex;
+}
+
+.inline-flex{
+  display: inline-flex;
 }
 
 .table{
@@ -1009,12 +1017,12 @@ img {
   height: 3.5rem;
 }
 
-.h-40{
-  height: 10rem;
-}
-
 .h-full{
   height: 100%;
+}
+
+.h-40{
+  height: 10rem;
 }
 
 .max-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
@@ -1087,10 +1095,6 @@ img {
 
 .w-20{
   width: 5rem;
-}
-
-.w-1\/2{
-  width: 50%;
 }
 
 .min-w-\[1000px\]{
@@ -1374,9 +1378,19 @@ img {
   background-color: rgb(240 249 255 / var(--tw-bg-opacity));
 }
 
+.bg-gray-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
+
 .bg-slate-100{
   --tw-bg-opacity: 1;
   background-color: rgb(241 245 249 / var(--tw-bg-opacity));
+}
+
+.bg-slate-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
 }
 
 .object-cover{
@@ -1840,6 +1854,11 @@ img {
   color: rgb(2 132 199 / var(--tw-text-opacity));
 }
 
+.hover\:bg-slate-300:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(203 213 225 / var(--tw-bg-opacity));
+}
+
 .hover\:text-sky-600:hover{
   --tw-text-opacity: 1;
   color: rgb(2 132 199 / var(--tw-text-opacity));
@@ -1964,14 +1983,6 @@ img {
 }
 
 @media (min-width: 768px){
-
-  .md\:w-1\/2{
-    width: 50%;
-  }
-
-  .md\:w-40{
-    width: 10rem;
-  }
 
   .md\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
