--- a/public/css/swipe.css
+++ b/public/css/swipe.css
@@ -1,10 +1,11 @@
-html,
+/* html,
 body {
   position: relative;
   height: 100%;
 }
 
 body {
+  background: #eee;
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   font-size: 14px;
   color: #000;
@@ -23,8 +24,17 @@ body {
   background: #fff;
 
   /* Center slide text vertically */
+  /* display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
   align-items: center;
 }
 
@@ -32,11 +42,9 @@ body {
   display: block;
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
+ */ 
 
-.swiper-button-next, 
-.swiper-button-prev {
-  color: #fff !important;
-}
+ 
+
