--- a/resources/css/swipe.css
+++ b/resources/css/swipe.css
@@ -1,10 +1,11 @@
-html,
+/* html,
 body {
   position: relative;
   height: 100%;
 }
 
 body {
+  background: #eee;
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   font-size: 14px;
   color: #000;
@@ -23,7 +24,7 @@ body {
   background: #fff;
 
   /* Center slide text vertically */
-  display: -webkit-box;
+  /* display: -webkit-box;
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
@@ -43,8 +44,6 @@ body {
   height: 100%;
   object-fit: cover;
 }
+ */ 
 
-.swiper-button-next, 
-.swiper-button-prev {
-  color: #fff !important;
-}
+ 
