--- a/public/css/admin/app.css
+++ b/public/css/admin/app.css
@@ -778,14 +778,6 @@ img {
   left: 216px;
 }
 
-.top-\[-8px\]{
-  top: -8px;
-}
-
-.left-\[176px\]{
-  left: 176px;
-}
-
 .top-3{
   top: 0.75rem;
 }
@@ -820,6 +812,86 @@ img {
 
 .top-16{
   top: 4rem;
+}
+
+.top-\[0px\]{
+  top: 0px;
+}
+
+.left-\[176px\]{
+  left: 176px;
+}
+
+.top-0{
+  top: 0px;
+}
+
+.top-4{
+  top: 1rem;
+}
+
+.top-\[50px\]{
+  top: 50px;
+}
+
+.top-\[42px\]{
+  top: 42px;
+}
+
+.left-\[30px\]{
+  left: 30px;
+}
+
+.right-\[30px\]{
+  right: 30px;
+}
+
+.left-\[255px\]{
+  left: 255px;
+}
+
+.right-\[255px\]{
+  right: 255px;
+}
+
+.left-\[40px\]{
+  left: 40px;
+}
+
+.right-\[40px\]{
+  right: 40px;
+}
+
+.left-\[10px\]{
+  left: 10px;
+}
+
+.right-\[10px\]{
+  right: 10px;
+}
+
+.left-\[0px\]{
+  left: 0px;
+}
+
+.right-\[0px\]{
+  right: 0px;
+}
+
+.left-\[-16px\]{
+  left: -16px;
+}
+
+.right-\[-16px\]{
+  right: -16px;
+}
+
+.left-\[20px\]{
+  left: 20px;
+}
+
+.right-\[20px\]{
+  right: 20px;
 }
 
 .z-20{
@@ -892,6 +964,10 @@ img {
   margin-bottom: 0.75rem;
 }
 
+.ml-2{
+  margin-left: 0.5rem;
+}
+
 .block{
   display: block;
 }
@@ -940,8 +1016,60 @@ img {
   height: 1.25rem;
 }
 
+.h-3{
+  height: 0.75rem;
+}
+
+.h-24{
+  height: 6rem;
+}
+
+.h-\[90px\]{
+  height: 90px;
+}
+
+.h-\[318px\]{
+  height: 318px;
+}
+
+.h-\[320px\]{
+  height: 320px;
+}
+
+.h-\[340px\]{
+  height: 340px;
+}
+
+.h-\[339px\]{
+  height: 339px;
+}
+
+.h-\[400px\]{
+  height: 400px;
+}
+
+.h-full{
+  height: 100%;
+}
+
+.h-\[100\%\]{
+  height: 100%;
+}
+
+.h-\[400\]{
+  height: 400;
+}
+
 .max-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
   max-height: calc(100vh - 4rem);
+}
+
+.max-h-\[400px\]{
+  max-height: 400px;
+}
+
+.max-h-\[100\%\]{
+  max-height: 100%;
 }
 
 .min-h-\[400px\]{
@@ -954,6 +1082,14 @@ img {
 
 .min-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
   min-height: calc(100vh - 4rem);
+}
+
+.min-h-\[100\%\]{
+  min-height: 100%;
+}
+
+.min-h-\[500px\]{
+  min-height: 500px;
 }
 
 .w-\[24px\]{
@@ -996,6 +1132,10 @@ img {
   width: 1.25rem;
 }
 
+.w-\[50\%\]{
+  width: 50%;
+}
+
 .min-w-\[1280\.3px\]{
   min-width: 1280.3px;
 }
@@ -1006,6 +1146,30 @@ img {
 
 .max-w-md{
   max-width: 28rem;
+}
+
+.max-w-\[400px\]{
+  max-width: 400px;
+}
+
+.max-w-\[600px\]{
+  max-width: 600px;
+}
+
+.max-w-\[800px\]{
+  max-width: 800px;
+}
+
+.max-w-\[1200px\]{
+  max-width: 1200px;
+}
+
+.max-w-full{
+  max-width: 100%;
+}
+
+.max-w-\[100\%\]{
+  max-width: 100%;
 }
 
 .flex-none{
@@ -1039,10 +1203,6 @@ img {
 .scale-100{
   --tw-scale-x: 1;
   --tw-scale-y: 1;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.transform{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1088,6 +1248,10 @@ img {
   grid-template-columns: repeat(12, minmax(0, 1fr));
 }
 
+.grid-cols-2{
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
 .flex-col{
   flex-direction: column;
 }
@@ -1118,6 +1282,23 @@ img {
 
 .gap-5{
   gap: 1.25rem;
+}
+
+.gap-y-4{
+  row-gap: 1rem;
+}
+
+.gap-y-1{
+  row-gap: 0.25rem;
+}
+
+.gap-y-0{
+  row-gap: 0px;
+}
+
+.gap-x-2{
+  -moz-column-gap: 0.5rem;
+       column-gap: 0.5rem;
 }
 
 .divide-y > :not([hidden]) ~ :not([hidden]){
@@ -1151,8 +1332,16 @@ img {
   border-radius: 0.375rem;
 }
 
+.border-\[10px\]{
+  border-width: 10px;
+}
+
 .border-b{
   border-bottom-width: 1px;
+}
+
+.border-solid{
+  border-style: solid;
 }
 
 .border-gray-300{
@@ -1168,6 +1357,11 @@ img {
 .border-slate-800{
   --tw-border-opacity: 1;
   border-color: rgb(30 41 59 / var(--tw-border-opacity));
+}
+
+.border-white{
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
 .bg-\[\#eee\]{
@@ -1213,6 +1407,21 @@ img {
 .bg-slate-900{
   --tw-bg-opacity: 1;
   background-color: rgb(15 23 42 / var(--tw-bg-opacity));
+}
+
+.bg-\[rgb\(255\2c 255\2c 255\)\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.object-contain{
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.object-cover{
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .p-4{
@@ -1261,6 +1470,16 @@ img {
   padding-bottom: 0.5rem;
 }
 
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.px-3{
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
 .pl-3{
   padding-left: 0.75rem;
 }
@@ -1283,6 +1502,22 @@ img {
 
 .pr-5{
   padding-right: 1.25rem;
+}
+
+.pl-2{
+  padding-left: 0.5rem;
+}
+
+.pl-4{
+  padding-left: 1rem;
+}
+
+.pt-2{
+  padding-top: 0.5rem;
+}
+
+.pt-1{
+  padding-top: 0.25rem;
 }
 
 .text-left{
@@ -1334,12 +1569,34 @@ img {
   line-height: 2rem;
 }
 
+.text-base{
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.text-\[12px\]{
+  font-size: 12px;
+}
+
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-\[16px\]{
+  font-size: 16px;
+}
+
 .font-bold{
   font-weight: 700;
 }
 
 .font-semibold{
   font-weight: 600;
+}
+
+.font-medium{
+  font-weight: 500;
 }
 
 .text-red-600{
@@ -1508,14 +1765,63 @@ img {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.hover\:rounded:hover{
+  border-radius: 0.25rem;
+}
+
+.hover\:rounded-lg:hover{
+  border-radius: 0.5rem;
+}
+
 .hover\:bg-\[\#65c8c6\]:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(101 200 198 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-slate-400:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(148 163 184 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-black:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-sky-700:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(3 105 161 / var(--tw-bg-opacity));
+}
+
+.hover\:font-normal:hover{
+  font-weight: 400;
+}
+
+.hover\:font-medium:hover{
+  font-weight: 500;
+}
+
+.hover\:font-bold:hover{
+  font-weight: 700;
+}
+
+.hover\:font-semibold:hover{
+  font-weight: 600;
+}
+
 .hover\:text-sky-600:hover{
   --tw-text-opacity: 1;
   color: rgb(2 132 199 / var(--tw-text-opacity));
+}
+
+.marker\:hover\:bg-\[\#65c8c6\]:hover *::marker{
+  --tw-bg-opacity: 1;
+  background-color: rgb(101 200 198 / var(--tw-bg-opacity));
+}
+
+.marker\:hover\:bg-\[\#65c8c6\]:hover::marker{
+  --tw-bg-opacity: 1;
+  background-color: rgb(101 200 198 / var(--tw-bg-opacity));
 }
 
 .focus\:outline-none:focus{
@@ -1551,6 +1857,14 @@ img {
 
 @media (min-width: 1024px){
 
+  .lg\:left-\[-16px\]{
+    left: -16px;
+  }
+
+  .lg\:right-\[-16px\]{
+    right: -16px;
+  }
+
   .lg\:col-span-7{
     grid-column: span 7 / span 7;
   }
@@ -1561,6 +1875,15 @@ img {
 
   .lg\:col-span-9{
     grid-column: span 9 / span 9;
+  }
+
+  .lg\:col-span-1{
+    grid-column: span 1 / span 1;
+  }
+
+  .lg\:my-2{
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
   }
 
   .lg\:mb-0{
@@ -1583,12 +1906,32 @@ img {
     height: 400px;
   }
 
+  .lg\:h-\[300px\]{
+    height: 300px;
+  }
+
+  .lg\:min-w-\[1280\.3px\]{
+    min-width: 1280.3px;
+  }
+
   .lg\:grid-cols-8{
     grid-template-columns: repeat(8, minmax(0, 1fr));
   }
 
   .lg\:gap-4{
     gap: 1rem;
+  }
+
+  .lg\:gap-6{
+    gap: 1.5rem;
+  }
+
+  .lg\:gap-8{
+    gap: 2rem;
+  }
+
+  .lg\:rounded-lg{
+    border-radius: 0.5rem;
   }
 
   .lg\:p-7{
