--- a/resources/css/swipe.css
+++ b/resources/css/swipe.css
@@ -1,49 +1,30 @@
-/* html,
-body {
-  position: relative;
-  height: 100%;
+.slider .slider-items .item {
+  display: none;
 }
 
-body {
-  background: #eee;
-  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  color: #000;
-  margin: 0;
-  padding: 0;
-}
 
-.swiper {
-  width: 100%;
-  height: 100%;
-}
-
-.swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: #fff;
-
-  /* Center slide text vertically */
-  /* display: -webkit-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center;
-}
-
-.swiper-slide img {
+.slider .slider-items .item.active {
   display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
 }
- */ 
 
- 
+.slider .left-slide, .slider .right-slide {
+  position: absolute;
+  height: 40px;
+  width: 40px;
+  background-color: #fff;
+  border-radius: 50%;
+  color: #000;
+  font-size: 24px;
+  top: 50%;
+  cursor: pointer;
+  margin-top: -20px;
+  text-align: center;
+  line-height: 40px;
+  font-weight: bold;
+  transition: all 0.5s ease;
+}
+
+.slider .left-slide:hover, .slider .right-slide:hover {
+  background-color: #65c8c6;
+  color: #fff;
+}
