--- a/public/css/admin/app.css
+++ b/public/css/admin/app.css
@@ -1079,6 +1079,10 @@ img {
   width: 18rem;
 }
 
+.w-20{
+  width: 5rem;
+}
+
 .w-40{
   width: 10rem;
 }
@@ -1091,24 +1095,8 @@ img {
   width: 7rem;
 }
 
-.w-20{
-  width: 5rem;
-}
-
-.w-\[50px\]{
-  width: 50px;
-}
-
-.w-24{
-  width: 6rem;
-}
-
 .min-w-\[1000px\]{
   min-width: 1000px;
-}
-
-.min-w-\[768px\]{
-  min-width: 768px;
 }
 
 .max-w-6xl{
@@ -1123,24 +1111,12 @@ img {
   max-width: 24rem;
 }
 
-.max-w-\[50px\]{
-  max-width: 50px;
-}
-
 .flex-none{
   flex: none;
 }
 
 .flex-grow{
   flex-grow: 1;
-}
-
-.table-auto{
-  table-layout: auto;
-}
-
-.table-fixed{
-  table-layout: fixed;
 }
 
 .origin-top-right{
@@ -1500,6 +1476,16 @@ img {
 .py-10{
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
+}
+
+.py-0\.5{
+  padding-top: 0.125rem;
+  padding-bottom: 0.125rem;
+}
+
+.py-0{
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
 
 .pt-8{
